--- a/package/command/package.json
+++ b/package/command/package.json
@@ -5,13 +5,6 @@
   "packageManager": "pnpm@8.7.0",
   "description": "_description_",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/react-web#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/antfu/react-web.git"
-  },
-  "bugs": "https://github.com/antfu/react-web/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
@@ -44,7 +37,6 @@
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
-    "start": "esno src/index.ts && npm run copyTmp",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks",
@@ -54,6 +46,7 @@
     "@antfu/eslint-config": "^0.41.0",
     "@antfu/ni": "^0.21.6",
     "@antfu/utils": "^0.7.6",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.5.7",
     "bumpp": "^9.2.0",
     "eslint": "^8.48.0",
@@ -74,6 +67,8 @@
     "*": "eslint --fix"
   },
   "dependencies": {
-    "copy-folder-util": "^1.1.1"
+    "commander": "^11.0.0",
+    "copy-folder-util": "^1.1.1",
+    "fs-extra": "^11.1.1"
   }
 }
