--- a/package/command/package.json
+++ b/package/command/package.json
@@ -67,6 +67,7 @@
     "*": "eslint --fix"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "copy-folder-util": "^1.1.1",
     "fs-extra": "^11.1.1"
