--- a/package/template/tsconfig.json
+++ b/package/template/tsconfig.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true,
   },
   "include": ["src"],
-  "references": [{ "path": ".react-web/tsconfig.node.json" }]
+  "references": [{ "path": ".app/tsconfig.node.json" }]
 }
