--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Test
+        run: pnpm test
+
       - name: Build
         run: pnpm build
 
